fixed row spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,25 +27,18 @@ body{
 }
 
 
-.contentRow{
-    padding: 10px;
-    opacity: 0.9;
-}
+
 
 .content{
     background-color: white;
     opacity: 0.9;
     margin: auto;
     padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
 }
 
-.contentPlot{
-    background-color: white;
-    opacity: 0.9;
-    padding: 10px;
-    width: 100%;
-}
 
 .aboutBlock {
     margin-top: 10px;
